--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -1,78 +1,334 @@
-.mainHeader {
-  width: 50%;
-  height: 100px;
-  background-color: #1e0253;
+/*Full Screen*/
+@media only screen and (max-width: 1980px) {
+  .mainHeader {
+    width: 50%;
+    height: 100px;
+    background-color: #1e0253;
+  }
+
+  .secondSquare {
+    width: 100%;
+    height: 100%;
+    margin-left: 100%;
+    background-color: #1e0253;
+    padding-left: 200px;
+  }
+  .title {
+    background-color: #fff;
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 30px;
+    font-weight: bolder;
+    margin-top: 100px;
+  }
+  .subTitle {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 30px;
+    font-weight: bold;
+    margin-top: 90px;
+  }
+  .text {
+    text-align: center;
+    font-size: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
+    line-height: 1.9;
+    margin-bottom: 100px;
+  }
+  .meetTeam {
+    width: 100%;
+    height: 300px;
+    background-color: #fff;
+  }
+
+  .user {
+    display: inline-flex;
+    flex-direction: column;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin-left: 6%;
+    
+    /* margin-right: 30px; */
+    margin-top: 50px;
+    margin-bottom: 100px;
+    text-align: center;
+    align-items: center;
+
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+
+  .one {
+    background-image: url("../images/employee/Elaine.jpg");
+    padding-top: 200px;
+    margin-left: 17%;
+    
+  }
+
+  .two {
+    background-image: url("../images/employee/Luckasz.jpg");
+    padding-top: 200px;
+    
+  }
+
+  .three {
+    background-image: url("../images/employee/Thiago.jpg");
+    padding-top: 200px;
+    
+  }
+  .four {
+    background-image: url("../images/employee/Renan.jpg");
+    padding-top: 200px;
+    
+  }
 }
 
-.secondSquare {
-  width: 100%;
-  height: 100%;
-  margin-left: 100%;
-  background-color: #dd9f0d;
-  padding-left: 200px;
-}
-.title {
-  background-color: #fff;
-  text-align: center;
-  font-size: 30px;
-  margin-bottom: 30px;
-  font-weight: bolder;
-  margin-top: 100px;
-}
-.subTitle {
-  text-align: center;
-  font-size: 20px;
-  margin-bottom: 30px;
-  font-weight: bold;
-  margin-top: 150px;
-}
-.text {
-  text-align: center;
-  font-size: 20px;
-  margin-left: 100px;
-  margin-right: 100px;
-  line-height: 1.9;
-  margin-bottom: 100px;
-}
-.meetTeam {
-  width: 100%;
-  height: 300px;
-  background-color: #fff;
+@media only screen and (max-width: 1520px) {
+  .mainHeader {
+    width: 50%;
+    height: 100px;
+    background-color: #1e0253;
+  }
+
+  .secondSquare {
+    width: 100%;
+    height: 100%;
+    margin-left: 100%;
+    background-color: #1e0253;
+    padding-left: 200px;
+  }
+  .title {
+    background-color: #fff;
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 30px;
+    font-weight: bolder;
+    margin-top: 100px;
+  }
+  .subTitle {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 30px;
+    font-weight: bold;
+    margin-top: 90px;
+  }
+  .text {
+    text-align: center;
+    font-size: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
+    line-height: 1.9;
+    margin-bottom: 100px;
+  }
+  .meetTeam {
+    width: 100%;
+    height: 300px;
+    background-color: #fff;
+  }
+
+  .user {
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin-left: 20px;
+    margin-right: 30px;
+    margin-top: 60px;
+    margin-bottom: 150px;
+    text-align: center;
+    align-items: center;
+
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+
+  .one {
+    background-image: url("../images/employee/Elaine.jpg");
+    padding-top: 200px;
+  }
+
+  .two {
+    background-image: url("../images/employee/Luckasz.jpg");
+    padding-top: 200px;
+  }
+
+  .three {
+    background-image: url("../images/employee/Thiago.jpg");
+    padding-top: 200px;
+  }
+  .four {
+    background-image: url("../images/employee/Renan.jpg");
+    padding-top: 200px;
+  }
 }
 
-.user {
-  display: inline-block;
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  margin-left: 140px;
-  margin-right: 100px;
-  margin-top: 50px;
-  margin-bottom: 100px;
-  text-align: center;
-  align-items: center;
+/*Mobile 409 x 673*/
+@media only screen and (max-width: 600px) {
+  .mainHeader {
+    width: 50%;
+    height: 100px;
+    background-color: #1e0253;
+  }
 
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
+  .secondSquare {
+    width: 100%;
+    height: 100%;
+    margin-left: 100%;
+    background-color: #1e0253;
+    padding-left: 200px;
+  }
+  .title {
+    background-color: #fff;
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 30px;
+    font-weight: bolder;
+    margin-top: 100px;
+  }
+  .subTitle {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 30px;
+    font-weight: bold;
+    margin-top: 90px;
+  }
+  .text {
+    text-align: center;
+    font-size: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
+    line-height: 1.9;
+    margin-bottom: 100px;
+  }
+  .meetTeam {
+    width: 100%;
+    height: 300px;
+    background-color: #fff;
+  }
+
+  .user {
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin-left: 50px;
+    margin-right: 30px;
+    margin-top: 30px;
+    margin-bottom: 100px;
+    text-align: center;
+    align-items: center;
+
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+
+  .one {
+    background-image: url("../images/employee/Elaine.jpg");
+    padding-top: 200px;
+    align-items: center;
+  }
+
+  .two {
+    background-image: url("../images/employee/Luckasz.jpg");
+    padding-top: 200px;
+  }
+
+  .three {
+    background-image: url("../images/employee/Thiago.jpg");
+    padding-top: 200px;
+  }
+  .four {
+    background-image: url("../images/employee/Renan.jpg");
+    padding-top: 200px;
+  }
 }
 
-.one {
-  background-image: url("../images/employee/Elaine.jpg");
-  padding-top: 200px;
-  align-items: center;
-}
+/*Mobile 409 x 673*/
+@media only screen and (max-width: 410px) {
+  .mainHeader {
+    width: 50%;
+    height: 100px;
+    background-color: #1e0253;
+  }
 
-.two {
-  background-image: url("../images/employee/Luckasz.jpg");
-  padding-top: 200px;
-}
+  .secondSquare {
+    width: 100%;
+    height: 100%;
+    margin-left: 100%;
+    background-color: #1e0253;
+    padding-left: 200px;
+  }
+  .title {
+    background-color: #fff;
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 30px;
+    font-weight: bolder;
+    margin-top: 100px;
+  }
+  .subTitle {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 30px;
+    font-weight: bold;
+    margin-top: 90px;
+  }
+  .text {
+    text-align: center;
+    font-size: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
+    line-height: 1.9;
+    margin-bottom: 100px;
+  }
+  .meetTeam {
+    width: 100%;
+    height: 300px;
+    background-color: #fff;
+  }
 
-.three {
-  background-image: url("../images/employee/Thiago.jpg");
-  padding-top: 200px;
-}
-.four {
-  background-image: url("../images/employee/Renan.jpg");
-  padding-top: 200px;
+  .user {
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin-left: 25%;
+    margin-right: 100px;
+    margin-top: 30px;
+    margin-bottom: 100px;
+    text-align: center;
+    align-items: center;
+
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+
+  .one {
+    background-image: url("../images/employee/Elaine.jpg");
+    padding-top: 200px;
+    align-items: center;
+  }
+
+  .two {
+    background-image: url("../images/employee/Luckasz.jpg");
+    padding-top: 200px;
+    align-items: center;
+  }
+
+  .three {
+    background-image: url("../images/employee/Thiago.jpg");
+    padding-top: 200px;
+    align-items: center;
+  }
+  .four {
+    background-image: url("../images/employee/Renan.jpg");
+    padding-top: 200px;
+    align-items: center;
+  }
 }
