--- a/src/SlideImages/slide.css
+++ b/src/SlideImages/slide.css
@@ -1,4 +1,5 @@
-@media screen and (min-width: 960px) {
+/*Full Screen*/
+@media only screen and (max-width: 1980px) {
   * {
     box-sizing: border-box;
   }
@@ -41,45 +42,18 @@
   .slide-text {
     width: 100%;
     height: 100%;
-    color: #fff;
+    color: #dd9f0d;
     position: absolute;
     text-align: right;
-    top: 20%;
+    top: 50%;
     padding-right: 40px;
     z-index: 9;
-    font-size: 40px;
+    font-size: 50px;
     text-shadow: 5px 3px #1e0253;
-    font-weight: bold;
   }
 
   .slide-text {
-    top: 50%;
-  }
-
-  .prev,
-  .next {
-    cursor: pointer;
-    z-index: 100;
-    position: absolute;
-    top: 10%;
-    width: auto;
-    padding-top: 1rem;
-    margin-top: -3rem;
-    font-size: 70px;
-    font-weight: bold;
-    border-radius: 0 5px 5px 0;
-    margin-top: 600px;
-  }
-
-  .prev:hover,
-  .next:hover {
-    color: white;
-    transition: all 0.5s ease-in;
-  }
-
-  .next {
-    right: 0;
-    border-radius: 5px 0 0 5px;
+    top: 90%;
   }
 
   .all-dots {
@@ -87,7 +61,7 @@
     height: 100%;
     position: absolute;
     display: flex;
-    top: 40%;
+    margin-top: -730px;
     justify-content: center;
     z-index: 200;
   }
@@ -110,7 +84,178 @@
     opacity: 0.8;
   }
 
-  @media screen and (min-width: 1024px) {
+  /*Meidle Screen*/
+  @media only screen and (max-width: 1024px) {
+    * {
+      box-sizing: border-box;
+    }
+
+    :root {
+      --heights: 30vh;
+      --widths: 100%;
+    }
+
+    .slider-container {
+      height: var(--heights);
+      width: var(--widths);
+      position: relative;
+      margin: auto;
+      overflow: hidden;
+    }
+
+    .active {
+      display: inline-block;
+    }
+
+    .inactive {
+      display: none;
+    }
+
+    .slides {
+      height: var(--heights);
+      width: var(--widths);
+      position: relative;
+    }
+
+    .slide-image {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      object-fit: cover;
+    }
+
+    .slide-title,
+    .slide-text {
+      width: 100%;
+      height: 100%;
+      color: #dd9f0d;
+      position: absolute;
+      text-align: right;
+      top: 40px;
+      padding-right: 40px;
+      z-index: 9;
+      font-size: 30px;
+      text-shadow: 5px 3px #1e0253;
+    }
+
+    .slide-text {
+      top: 85%;
+    }
+
+    .all-dots {
+      position: absolute;
+      display: flex;
+      justify-content: center;
+      z-index: 200;
+    }
+
+    .dot {
+      cursor: pointer;
+      height: 1rem;
+      width: 1rem;
+      margin: 0 3px;
+      background-color: #dd9f0d;
+      border-radius: 50%;
+      display: inline-block;
+      margin-top: 750px;
+      padding: 20px;
+      display: flex;
+    }
+
+    .active-dot,
+    .dot:hover {
+      background-color: #1e0253;
+      opacity: 0.8;
+    }
+  }
+  @media only screen and (max-width: 600px) {
+    * {
+      box-sizing: border-box;
+    }
+
+    :root {
+      --heights: 70vh;
+      --widths: 100%;
+    }
+
+    .slider-container {
+      height: var(--heights);
+      width: var(--widths);
+      position: relative;
+      margin: auto;
+      overflow: hidden;
+    }
+
+    .active {
+      display: inline-block;
+    }
+
+    .inactive {
+      display: none;
+    }
+
+    .slides {
+      height: var(--heights);
+      width: var(--widths);
+      position: relative;
+    }
+
+    .slide-image {
+      width: 100%;
+      height: 100%;
+      position: flex;
+      object-fit: cover;
+    }
+
+    .slide-title,
+    .slide-text {
+      width: 100%;
+      height: 100%;
+      color: #dd9f0d;
+      position: absolute;
+      text-align: right;
+      top: 5%;
+      padding-right: 40px;
+      z-index: 9;
+      font-size: 30px;
+      text-shadow: 5px 3px #1e0253;
+      font-weight: bold;
+    }
+
+    .slide-text {
+      top: 400px;
+    }
+
+    .all-dots {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      display: flex;
+      margin-top: -730px;
+      justify-content: center;
+      z-index: 200;
+    }
+
+    .dot {
+      cursor: pointer;
+      height: 1rem;
+      width: 1rem;
+      margin: 0 3px;
+      background-color: #dd9f0d;
+      border-radius: 50%;
+      display: inline-block;
+      margin-top: 750px;
+      padding: 20px;
+    }
+
+    .active-dot,
+    .dot:hover {
+      background-color: #1e0253;
+      opacity: 0.8;
+    }
+  }
+  /*Meidle Screen*/
+  @media only screen and (max-width: 410px) {
     * {
       box-sizing: border-box;
     }
@@ -151,46 +296,21 @@
 
     .slide-title,
     .slide-text {
-      color: #fff;
+      color: #dd9f0d;
       position: absolute;
-      text-align: center;
+      text-align: left;
       z-index: 9;
       font-size: 30px;
-      text-shadow: 5px 3px #1e0253;
+      text-shadow: 2px 3px #1e0253;
       font-weight: bold;
-      text-align: left;
-      padding-left: 30px;
+      text-align: right;
+      top: 10px;
     }
 
     .slide-text {
       font-size: 20px;
-      text-align: left;
-      padding-left: 30px;
-    }
-
-    .prev,
-    .next {
-      cursor: pointer;
-      z-index: 100;
-      position: absolute;
-      width: auto;
-      padding-top: 1rem;
-      margin-top: -3rem;
-      font-size: 70px;
-      font-weight: bold;
-      border-radius: 0 5px 5px 0;
-      margin-top: 600px;
-    }
-
-    .prev:hover,
-    .next:hover {
-      color: white;
-      transition: all 0.5s ease-in;
-    }
-
-    .next {
-      right: 0;
-      border-radius: 5px 0 0 5px;
+      text-align: right;
+      top: 80%;
     }
 
     .all-dots {
@@ -202,20 +322,21 @@
 
     .dot {
       cursor: pointer;
-      height: 1rem;
-      width: 1rem;
+      height: 10px;
+      width: 10px;
       margin: 0 3px;
       background-color: #dd9f0d;
       border-radius: 50%;
       display: inline-block;
-      margin-top: 800px;
+      margin-top: 750px;
       padding: 20px;
+      display: flex;
     }
 
     .active-dot,
     .dot:hover {
       background-color: #1e0253;
-      opacity: 0.8;
+      opacity: 0.9;
     }
   }
 }
