--- a/src/Pages/Contact.css
+++ b/src/Pages/Contact.css
@@ -27,11 +27,41 @@
     margin-left: 10px;
   }
 }
+@media screen and (max-width: 1600px) {
+  .mainContactPart1 {
+    width: 50%;
+    height: 600px;
+  }
+
+  .mainContactImage {
+    height: 50%;
+    width: 100%;
+  }
+  .mainContact {
+    width: 100%;
+    background: #fff;
+  }
+  .formContact {
+    margin-left: 51%;
+    margin-top: -550px;
+    margin-right: 30px;
+    height: 500px;
+  }
+  .textfield {
+    margin-top: 10px;
+    margin-bottom: 18px;
+    margin-left: 10px;
+  }
+  .buttonSubmit {
+    margin-bottom: 20px;
+    margin-left: 10px;
+  }
+}
 
 @media screen and (max-width: 1024px) {
   .mainContactPart1 {
     width: 50%;
-    height: 500px;
+    height: 650px;
   }
 
   .mainContactImage {
@@ -54,7 +84,7 @@
     margin-left: 10px;
   }
   .buttonSubmit {
-    padding-top: 20px;
+    padding-top: 10px;
     margin-left: 10px;
   }
 }
@@ -62,21 +92,23 @@
 @media screen and (max-width: 600px) {
   .mainContactPart1 {
     width: 100%;
-    height: 900px;
+    height: 800px;
   }
   .mainContact {
     width: 100%;
-    height: 900px;
+    height: 1000px;
     background: #fff;
   }
   .formContact {
     margin-left: 5%;
     margin-top: -10px;
     margin-right: 30px;
-    height: 600px;
+    height: 1000px;
   }
   .mainContactImage {
-    content: url("../images/Originav2.jpg");
+    content: url("../images/Originav2.png");
+    height: 50%;
+    width: 100%;
   }
   .textfield {
     padding-top: 2px;
@@ -102,7 +134,7 @@
   .mainContactImage {
     height: 100%;
     width: 100%;
-    content: url("../images/Originav2.jpg");
+    content: url("../images/Originav2.png");
   }
   .formContact {
     margin-left: 10px;
