--- a/src/Pages/Footer.css
+++ b/src/Pages/Footer.css
@@ -110,11 +110,8 @@
 }
 
 .social-media-wrap {
-  display: flex;
   justify-content: space-between;
-  align-items: center;
-  width: 90%;
-  max-width: 1000px;
+  text-align: center;
   margin: 40px auto 0 auto;
 }
 
@@ -139,9 +136,11 @@
 
 .website-rights {
   color: #fff;
-  margin-bottom: 16px;
-  margin-left: 300px;
+  text-align: center;
+  width: 100%;
+
 }
+
 
 @media screen and (max-width: 820px) {
   .footer-links {
@@ -169,6 +168,8 @@
   .website-rights {
     color: #fff;
     margin-bottom: 16px;
-    margin-left: 30px;
+    margin-left: 200px;
+    width: 100%;
+    text-align: center;
   }
 }
