--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -33,52 +33,53 @@
 }
 
 /*Meidle Screen*/
-@media only screen and (max-width: 1024px) {
+@media screen and (max-width: 1600px) {
   .main {
     width: 100%;
-    height: 400px !important;
+    height: 600px !important;
     background: #dd9f0d;
   }
   .logoTalkToBee {
     width: 50%;
-    height: 400px !important;
+    height: 600px !important;
   }
   .TextWelcome {
-    margin-left: 50%;
     text-align: center;
-    margin-top: -360px;
-    font-size: 20px;
+    margin-left: 50%;
+    margin-top: -400px;
+    font-size: 40px;
   }
   .middleText {
     text-align: center;
-    margin-top: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
-    font-size: 15px;
+    margin-top: 30px;
+    padding-left: 52%;
+    margin-right: 20px;
+    font-size: 20px;
   }
   .finalText {
     text-align: center;
     margin-top: 30px;
-    margin-left: 10%;
-    margin-right: 100px;
-    font-size: 20px;
+    padding-left: 52%;
+    margin-right: 20px;
+    font-size: 30px;
   }
 }
 
-@media screen and (max-width: 600px) {
+
+@media screen and (max-width: 600px){
   .main {
     width: 100%;
-    height: 800px !important;
+    height: 1000px !important;
     background: #dd9f0d;
   }
   .logoTalkToBee {
     width: 100%;
-    height: 600px;
+    height: 800px;
   }
   .TextWelcome {
     margin-left: 10px;
     text-align: center;
-    margin-top: 80px;
+    margin-top: 50px;
     font-size: 30px;
     font-weight: bold;
   }
