--- a/src/SlideImages/slide.css
+++ b/src/SlideImages/slide.css
@@ -84,6 +84,27 @@
     opacity: 0.8;
   }
 
+  @media only screen and (max-width: 1600px) {
+    .slide-title,
+    .slide-text {
+      width: 100%;
+      height: 100%;
+      color: #dd9f0d;
+      position: absolute;
+      text-align: right;
+      top: 40px;
+      padding-right: 40px;
+      z-index: 9;
+      font-size: 40px;
+      text-shadow: 5px 3px #1e0253;
+    }
+
+    .slide-text {
+      top: 85%;
+    }
+
+
+  }
   /*Meidle Screen*/
   @media only screen and (max-width: 1024px) {
     * {
