--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -36,12 +36,12 @@
 @media screen and (max-width: 1600px) {
   .main {
     width: 100%;
-    height: 600px !important;
+    height: 500px !important;
     background: #dd9f0d;
   }
   .logoTalkToBee {
     width: 50%;
-    height: 600px !important;
+    height: 500px !important;
   }
   .TextWelcome {
     text-align: center;
@@ -69,12 +69,12 @@
 @media screen and (max-width: 600px){
   .main {
     width: 100%;
-    height: 1000px !important;
+    height: 1100px !important;
     background: #dd9f0d;
   }
   .logoTalkToBee {
+    /* height: 100%; */
     width: 100%;
-    height: 800px;
   }
   .TextWelcome {
     margin-left: 10px;
