--- a/src/Pages/Navbar.css
+++ b/src/Pages/Navbar.css
@@ -76,6 +76,7 @@
   .nav-links:hover {
     border-bottom: 4px solid #fff;
     transition: all 0.2s ease-out;
+    padding-top: 30px;
   }
 
   .fa-bars {
@@ -90,6 +91,9 @@
   }
 
   .menu-icon {
+    display: none;
+  }
+  .qrcode{
     display: none;
   }
 }
@@ -118,6 +122,7 @@
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 1;
+    height: 1000px;
   }
 
   .nav-links {
@@ -216,12 +221,11 @@
     width: 90%;
     display: inline;
   }
-  .visible {
-    visibility: visible;
+  .nav-item {
+    height: 80px;
   }
-
-  .hidden {
-    display: none;
+  .qrcode{
+    display: flex;
   }
 }
 @media screen and (max-width: 1024px) {
@@ -251,10 +255,18 @@
   }
 
   .nav-links {
+    display: block;
     text-align: center;
-    padding: 2rem;
-    width: 100%;
-    display: table;
+    margin: 0.5rem auto;
+    border-radius: 4px;
+    width: 80%;
+    text-decoration: none;
+    font-size: 1.5rem;
+    background-color: transparent;
+    color: #fff;
+    padding: 14px 20px;
+    transition: all 0.3s ease-out;
+    align-items: center;
   }
 
   .nav-links:hover {
@@ -330,14 +342,6 @@
     padding: 14px 20px;
     transition: all 0.3s ease-out;
   }
-  .fa-facebook {
-    background: transparent;
-    color: white;
-    padding: 20px 20px 20px 20px;
-    font-size: 50px;
-    width: 90%;
-    display: inline;
-  }
   .fa-linkedin {
     background: transparent;
     color: white;
@@ -346,6 +350,7 @@
     width: 90%;
     display: inline;
   }
+
   .visible {
     visibility: visible;
   }
@@ -353,8 +358,9 @@
   .hidden {
     display: none;
   }
+  
 
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 736px), screen and (min-width: 414px){
     .navbar-logo img {
       display: none;
     }
@@ -367,13 +373,29 @@
     }
     .qrcode{
       width: 30%;
-      margin-top: 100px;
-      margin-left: 150px;
+      margin-left: 260px;
     }
   }
-  @media screen and (max-device-width: 1366px), screen and (max-width: 322px) {
+  @media screen and (max-device-width: 667px), screen and (max-width: 375px){
     .navbar-logo img {
       display: none;
     }
+    .navbar-logo {
+      width: 50px;
+      height: 50px;
+      cursor: pointer;
+      display: flex;
+      margin-top: -10px;
+    }
+    .qrcode{
+      width: 40%;
+      margin-left: 30%;
+      margin-top: 5px;
+    }
   }
+  /* @media screen and (max-device-width: 1366px), screen and (max-width: 322px) {
+    .navbar-logo img {
+      display: none;
+    }
+  } */
 }
