--- a/src/Pages/JoingHive.css
+++ b/src/Pages/JoingHive.css
@@ -40,18 +40,18 @@ text-align-last: center;
 text-align: left;
 font-size: 30px;
 font-weight: bold;
-margin-left: auto;
+margin-left: 270px;
 margin-right: auto;
-padding-left: 400px;
+padding-left: 530px;
 margin-bottom: 30px;
 margin-top: 60px;
 }
 .list {
 font-size: 18px;
 line-height: 1.6;
-margin-left: auto;
+margin-left: 270px;
 margin-right: auto;
-padding-left: 450px;
+padding-left: 530px;
 padding-right: 400px;
 display: list-item;
 list-style-position: inside;
@@ -74,8 +74,8 @@ margin-top: 50px;
   .paragraph2{
     line-height: 1.9;
     margin-left: 0px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 100px;
+    margin-right: 100px;
     text-align: center;
     font-size: 20px;
     text-align-last: center;
