--- a/src/Pages/Contact.css
+++ b/src/Pages/Contact.css
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 1980px) {
   .mainContactPart1 {
     width: 50%;
-    height: 900px;
+    height: 1000px;
   }
 
   .mainContactImage {
@@ -15,7 +15,7 @@
     margin-left: 51%;
     margin-top: -700px;
     margin-right: 30px;
-    height: 575px;
+    height: 600px;
   }
   .textfield {
     margin-top: 10px;
@@ -30,7 +30,7 @@
 @media screen and (max-width: 1600px) {
   .mainContactPart1 {
     width: 50%;
-    height: 600px;
+    height: 900px;
   }
 
   .mainContactImage {
@@ -45,7 +45,7 @@
     margin-left: 51%;
     margin-top: -550px;
     margin-right: 30px;
-    height: 500px;
+    height: 600px;
   }
   .textfield {
     margin-top: 10px;
@@ -76,7 +76,7 @@
     margin-left: 51%;
     margin-top: -500px;
     margin-right: 30px;
-    height: 475px;
+    height: 600px;
   }
   .textfield {
     margin-top: 10px;
@@ -92,7 +92,7 @@
 @media screen and (max-width: 600px) {
   .mainContactPart1 {
     width: 100%;
-    height: 800px;
+    height: 900px;
   }
   .mainContact {
     width: 100%;
@@ -123,12 +123,12 @@
 
 @media screen and (max-width: 410px) {
   .mainContactPart1 {
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: 800px;
   }
   .mainContact {
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
     background: #fff;
   }
   .mainContactImage {
@@ -140,7 +140,7 @@
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 20px;
-    height: 475px;
+    height: 575px;
 
     margin-right: 30px;
   }
