Fixed menu horizontal problem and size error page

--- a/src/SlideImages/slide.css
+++ b/src/SlideImages/slide.css
@@ -950,7 +950,7 @@
         text-shadow: 2px 3px #1e0253;
         font-weight: bold;
         text-align: right;
-        margin-left: 25px;
+        margin-left: auto;
         top: auto;
       }
   
