--- a/src/Pages/Navbar.css
+++ b/src/Pages/Navbar.css
@@ -3,7 +3,7 @@
 @media screen and (max-width: 2000px) {
   .navbar {
     background: #1e0253;
-    height: 80px;
+    height: 1000px;
     width: auto;
     display: flex;
     text-align: right;
@@ -228,6 +228,107 @@
     display: flex;
   }
 }
+
+
+@media screen and (max-width: 812px) and (max-height:375) {
+  .navbar {
+    background: #1e0253;
+    height: 1000px;
+    width: auto;
+    display: flex;
+    text-align: right;
+    justify-content: center;
+    font-size: 1.2rem;
+    position: sticky;
+    top: 0;
+    z-index: 999;
+  }
+
+  .navbar-logo {
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    margin-top: 10px;
+    margin-right: 800px;
+    cursor: pointer;
+    display: none;
+  }
+  .navbar-logo:hover {
+    color: #1e0253;
+    opacity: 0.8;
+  }
+  .fa-code {
+    color: orange;
+  }
+  .fa-code:hover {
+    color: #2c3e50;
+  }
+
+  .fa-typo3 {
+    margin-left: 0.5rem;
+    font-size: 1.5rem;
+  }
+
+  .nav-menu {
+    display: grid;
+    grid-template-columns: repeat(6, auto);
+    grid-gap: 0px;
+    list-style: none;
+    text-align: right;
+    width: 90vw;
+    justify-content: end;
+  }
+
+  .nav-menu.active {
+    width: 100%;
+    background: #1e0253;
+    opacity: 0.8;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
+
+  .nav-item {
+    height: 80px;
+  }
+
+  .nav-links {
+    color: #fff;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    height: 100%;
+  }
+
+  .nav-links:hover {
+    border-bottom: 4px solid #fff;
+    transition: all 0.2s ease-out;
+    padding-top: 30px;
+    color: #dd9f0d;
+  }
+
+  .fa-bars {
+    color: #dd9f0d;
+  }
+  .fa-bars.fa-code:hover {
+    color: #dd9f0d;
+  }
+
+  .nav-links-mobile {
+    display: none;
+  }
+
+  .menu-icon {
+    display: none;
+  }
+  .qrcode{
+    display: none;
+  }
+}
+
+
 @media screen and (max-width: 1024px) {
   .NavbarItems {
     position: relative;
@@ -236,8 +337,8 @@
   .nav-menu {
     display: flex;
     flex-direction: column;
-    width: 90vw;
-    height: 90vh;
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 80px;
     left: -100%;
@@ -246,6 +347,7 @@
   }
 
   .nav-menu.active {
+    
     background: #1e0253;
     opacity: 0.8;
     left: 0;
@@ -393,9 +495,4 @@
       margin-top: 5px;
     }
   }
-  /* @media screen and (max-device-width: 1366px), screen and (max-width: 322px) {
-    .navbar-logo img {
-      display: none;
-    }
-  } */
 }
