Adjusted CSS pages

--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -31,8 +31,6 @@
   .text {
     text-align: center;
     font-size: 20px;
-    margin-left: 100px;
-    margin-right: 100px;
     line-height: 1.9;
     margin-bottom: 100px;
   }
@@ -48,14 +46,11 @@
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    margin-left: 6%;
-    
-    /* margin-right: 30px; */
     margin-top: 50px;
     margin-bottom: 100px;
     text-align: center;
     align-items: center;
-
+    margin-left: 200px;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -64,8 +59,6 @@
   .one {
     background-image: url("../images/employee/Elaine.jpg");
     padding-top: 200px;
-    margin-left: 17%;
-    
   }
 
   .two {
@@ -82,7 +75,6 @@
   .four {
     background-image: url("../images/employee/Renan.jpg");
     padding-top: 200px;
-    
   }
 }
 
@@ -96,7 +88,6 @@
   .secondSquare {
     width: 100%;
     height: 100%;
-    margin-left: 100%;
     background-color: #1e0253;
     padding-left: 100px;
   }
@@ -118,9 +109,10 @@
   .text {
     text-align: center;
     font-size: 20px;
-    margin-right: 100px;
     line-height: 1.9;
     margin-bottom: 100px;
+    padding-left: 50px;
+    padding-right: 50px;
   }
   .meetTeam {
     width: 100%;
@@ -133,94 +125,11 @@
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    margin-left: 120px;
-    margin-right: 0px;
     margin-top: 60px;
     margin-bottom: 150px;
     text-align: center;
     align-items: center;
-
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-  }
-
-  .one {
-    background-image: url("../images/employee/Elaine.jpg");
-    padding-top: 200px;
-  }
-
-  .two {
-    background-image: url("../images/employee/Luckasz.jpg");
-    padding-top: 200px;
-  }
-
-  .three {
-    background-image: url("../images/employee/Thiago.jpg");
-    padding-top: 200px;
-  }
-  .four {
-    background-image: url("../images/employee/Renan.jpg");
-    padding-top: 200px;
-  }
-}
-
-/*Mobile 409 x 673*/
-@media only screen and (max-width: 600px) {
-  .mainHeader {
-    width: 50%;
-    height: 100px;
-    background-color: #1e0253;
-  }
-
-  .secondSquare {
-    width: 100%;
-    height: 100%;
-    margin-left: 100%;
-    background-color: #1e0253;
-    padding-left: 100px;
-  }
-  .title {
-    background-color: #fff;
-    text-align: center;
-    font-size: 30px;
-    margin-bottom: 30px;
-    font-weight: bolder;
-    margin-top: 100px;
-  }
-  .subTitle {
-    text-align: center;
-    font-size: 20px;
-    margin-bottom: 30px;
-    font-weight: bold;
-    margin-top: 90px;
-  }
-  .text {
-    text-align: center;
-    font-size: 20px;
-    margin-left: 40px;
-    margin-right: 40px;
-    line-height: 1.9;
-    margin-bottom: 100px;
-  }
-  .meetTeam {
-    width: 100%;
-    height: 300px;
-    background-color: #fff;
-  }
-
-  .user {
-    display: inline-block;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
     margin-left: 100px;
-    margin-right: 30px;
-    margin-top: 30px;
-    margin-bottom: 100px;
-    text-align: center;
-    align-items: center;
-
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -229,7 +138,6 @@
   .one {
     background-image: url("../images/employee/Elaine.jpg");
     padding-top: 200px;
-    align-items: center;
   }
 
   .two {
@@ -247,8 +155,8 @@
   }
 }
 
-/*Mobile 409 x 673*/
-@media only screen and (max-width: 410px) {
+/*Iphone SE/5*/
+@media only screen and (max-width: 320px) and (max-height:568px) {
   .mainHeader {
     width: 50%;
     height: 100px;
@@ -258,7 +166,6 @@
   .secondSquare {
     width: 100%;
     height: 100%;
-    margin-left: 100%;
     background-color: #1e0253;
     padding-left: 100px;
   }
@@ -280,8 +187,8 @@
   .text {
     text-align: center;
     font-size: 20px;
-    margin-left: 40px;
-    margin-right: 40px;
+    
+    
     line-height: 1.9;
     margin-bottom: 100px;
   }
@@ -296,13 +203,87 @@
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    margin-left: 25%;
-    margin-right: 100px;
+    margin-top: 30px;
+    margin-bottom: 100px;
+    margin-left: 70px;
+    text-align: center;
+    align-items: center;
+
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+
+  .one {
+    background-image: url("../images/employee/Elaine.jpg");
+    padding-top: 200px;
+    align-items: center;
+  }
+
+  .two {
+    background-image: url("../images/employee/Luckasz.jpg");
+    padding-top: 200px;
+  }
+
+  .three {
+    background-image: url("../images/employee/Thiago.jpg");
+    padding-top: 200px;
+  }
+  .four {
+    background-image: url("../images/employee/Renan.jpg");
+    padding-top: 200px;
+  }
+}
+
+/*Pixel 2*/
+@media only screen and (max-width: 411px) and (max-height:731) {
+  .mainHeader {
+    width: 50%;
+    height: 100px;
+    background-color: #1e0253;
+  }
+
+  .secondSquare {
+    width: 100%;
+    height: 100%;
+    background-color: #1e0253;
+  }
+  .title {
+    background-color: #fff;
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 30px;
+    font-weight: bolder;
+    margin-top: 100px;
+  }
+  .subTitle {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 30px;
+    font-weight: bold;
+    margin-top: 90px;
+  }
+  .text {
+    text-align: center;
+    font-size: 20px;
+    line-height: 1.9;
+    margin-bottom: 100px;
+  }
+  .meetTeam {
+    width: 100%;
+    height: 300px;
+    background-color: #fff;
+  }
+
+  .user {
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;    
     margin-top: 30px;
     margin-bottom: 100px;
     text-align: center;
     align-items: center;
-
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -331,3 +312,45 @@
     align-items: center;
   }
 }
+
+
+/* 
+@media only screen and (max-width: 320px) and (max-height:568 ) {
+  .user {
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;    
+    margin-top: 30px;
+    margin-bottom: 100px;
+    margin-left: 40px;
+    text-align: center;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+
+  .one {
+    background-image: url("../images/employee/Elaine.jpg");
+    padding-top: 200px;
+    align-items: center;
+  }
+
+  .two {
+    background-image: url("../images/employee/Luckasz.jpg");
+    padding-top: 200px;
+    align-items: center;
+  }
+
+  .three {
+    background-image: url("../images/employee/Thiago.jpg");
+    padding-top: 200px;
+    align-items: center;
+  }
+  .four {
+    background-image: url("../images/employee/Renan.jpg");
+    padding-top: 200px;
+    align-items: center;
+  }
+} */
