--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -33,21 +33,21 @@
 }
 
 /*Meidle Screen*/
-@media screen and (max-width: 1600px) {
+@media only screen and (max-width: 1600px) {
   .main {
     width: 100%;
-    height: 600px !important;
+    height: 500px !important;
     background: #dd9f0d;
   }
   .logoTalkToBee {
     width: 50%;
-    height: 600px !important;
+    height: 500px !important;
   }
   .TextWelcome {
     text-align: center;
     margin-left: 50%;
-    margin-top: -360px;
     font-size: 40px;
+    padding-top: 150px;
   }
   .middleText {
     text-align: center;
@@ -81,7 +81,7 @@
     text-align: center;
     margin-left: 50%;
     font-size: 25px;
-    padding-top: 60px;
+    padding-top: 200px;
   }
   .middleText {
     text-align: center;
@@ -139,23 +139,23 @@
 @media screen and (max-width: 634px) {
   .main {
     width: 100%;
-    height: 1000px !important;
+    height: 800px !important;
     background: #dd9f0d;
   }
   .logoTalkToBee {
     width: 100%;
-    height: 600px !important;
+    height: 400px !important;
   }
   .TextWelcome {
     margin-left: auto;
     text-align: center;
-    margin-top: 0px;
+    padding-top: 20px;
     font-size: 30px;
     font-weight: bold;
   }
   .middleText {
     text-align: center;
-    margin-top: 30px;
+    margin-top: 20px;
     padding-left: 25px;
     margin-right: 50px;
     font-size: 20px;
@@ -174,24 +174,25 @@
 @media screen and (max-width: 375px) {
   .main {
     width: 100%;
-    height: 850px !important;
+    height: 750px !important;
     background: #dd9f0d;
   }
   .logoTalkToBee {
     width: 100%;
-    height: 400px !important;
+    height: 320px !important;
   }
   .TextWelcome {
     margin-left: 10px;
     text-align: center;
-    margin-top: 10px;
+    padding-top: 5px;
     font-size: 30px;
     font-weight: bold;
+    padding-bottom: 30px;
   }
   .middleText {
     text-align: center;
-    margin-top: 10px;
-    padding-left: 10px;
+    padding-top: 10px;
+    padding-left: 5px;
     margin-right: 10px;
     font-size: 20px;
   }
