--- a/src/Pages/HowItWorks.css
+++ b/src/Pages/HowItWorks.css
@@ -36,9 +36,9 @@ box-shadow: 0 9px 25px rgb(0 0 0 / 0.2);
 }
 .image2{
 background-image: url("../images/HowItWorks/image2.jpg");
-height: 493px;
-width: 755px;
-margin-left: 550px;
+height: 400px;
+width: 710px;
+margin-left: 560px;
 margin-right: 500px;
 margin-bottom: 50px;
 margin-top: 50px; 
@@ -78,10 +78,10 @@ margin-top: 50px;
 box-shadow: 0 9px 25px rgb(0 0 0 / 0.2);
 }
 .image2{
-background-image: url("../images/HowItWorks/image21600.jpg");
-width: 340px;
-height: 220px;
-margin-left: auto;
+background-image: url("../images/HowItWorks/image2.jpg");
+width: 700px;
+height: 400px;
+margin-left: 370px;
 margin-right: auto;
 margin-bottom: 50px;
 margin-top: 50px; 
@@ -121,9 +121,9 @@ margin-top: 50px;
 box-shadow: 0 9px 25px rgb(0 0 0 / 0.2);
 }
 .image2{
-background-image: url("../images/HowItWorks/iphone2SE.jpg");
-width: 300px;
-height: 200px;
+background-image: url("../images/HowItWorks/image2M.jpg");
+width: 348px;
+height: 220px;
 margin-left: auto;
 margin-right: auto;
 margin-bottom: 10px;
@@ -246,7 +246,7 @@ height: 175px;
 }
 .image2{
 background-image: url("../images/HowItWorks/iphone2SE.jpg");
-width: 310px;
+width: 287px;
 height: 202px;
 margin-left: auto;
 margin-right: auto;
@@ -256,5 +256,135 @@ box-shadow: 0 9px 25px rgb(0 0 0 / 0.2);
 }
 }
 
+
+
+/*Ipad*/
+@media screen and (max-width: 769px) {
+    .titles{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 30px;
+    margin-top: 50px;
+    }
+    .paragraph{
+    line-height: 1.6;
+    margin-left: 30px;
+    margin-right: 30px;
+    text-align: center;
+    font-size: 18px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align-last: center;
+    }
+    .image1{
+    background-image: url("../images/HowItWorks/image1M.jpg");
+    width: 270px;
+    height: 170px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+    margin-top: 50px; 
+    box-shadow: 0 9px 25px rgb(0 0 0 / 0.2);
+    }
+    .image2{
+    background-image: url("../images/HowItWorks/image2M.jpg");
+    width: 348px;
+    height: 220px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    margin-top: 30px; 
+    box-shadow: 0 9px 25px rgb(0 0 0 / 0.2);
+    }
+    } 
     
     
+
+/*Ipad Pro*/
+@media screen and (max-width: 1024px) {
+    .titles{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 30px;
+    margin-top: 50px;
+    }
+    .paragraph{
+    line-height: 1.6;
+    margin-left: 30px;
+    margin-right: 30px;
+    text-align: center;
+    font-size: 18px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align-last: center;
+    }
+    .image1{
+    background-image: url("../images/HowItWorks/image1M.jpg");
+    width: 270px;
+    height: 170px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+    margin-top: 50px; 
+    box-shadow: 0 9px 25px rgb(0 0 0 / 0.2);
+    }
+    .image2{
+    background-image: url("../images/HowItWorks/image2M.jpg");
+    width: 348px;
+    height: 220px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    margin-top: 30px; 
+    box-shadow: 0 9px 25px rgb(0 0 0 / 0.2);
+    }
+    } 
+    
+/*Ipad Pro*/
+@media screen and (max-width: 280px) {
+    .titles{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 30px;
+    margin-top: 50px;
+    }
+    .paragraph{
+    line-height: 1.6;
+    margin-left: 30px;
+    margin-right: 30px;
+    text-align: center;
+    font-size: 18px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align-last: center;
+    }
+    .image1{
+    background-image: url("../images/HowItWorks/image1M.jpg");
+    width: 270px;
+    height: 170px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+    margin-top: 50px; 
+    box-shadow: 0 9px 25px rgb(0 0 0 / 0.2);
+    }
+    .image2{
+    background-image: url("../images/HowItWorks/iphone2SE.jpg");
+    width: 348px;
+    height: 220px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    margin-top: 30px; 
+    box-shadow: 0 9px 25px rgb(0 0 0 / 0.2);
+    }
+    }     
